[package]
name = "git-work"
version = "0.1.0"
authors = ["SirWindfield <SirWindfield@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
git2 = { version = "0.13.17", features = ["vendored-openssl"] }
heck = "0.3.2"

[build-dependencies]
anyhow = "1.0.39"
heck = "0.3.2"
quote = "1.0.9"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
